--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node test",
+    "test": "node test/test",
     "install": "node-gyp rebuild"
   },
   "repository": "",
